# ipsec-client

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
data/: ipsec-client.desktop
flatpak/: io.github.mitexleo.ipsec_client.yml
scripts/: postinst
src/: main.cpp  mainwindow.cpp  mainwindow.h  vpndialog.cpp  vpndialog.h
